--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                 Lorem ipsum, dolor sit amet consectetur adipisicing elit. Inventore ipsam dolorem dolor, et quod delectus libero corporis nisi eum, modi placeat quae, ea optio? Delectus velit deleniti temporibus placeat laboriosam.
             </p>
             <p> 
-                <a href="https://forms.gle/N46pRsAMvMZQJzvWA"> <button type="button" class="btn btn-info human">Enter your email address...&nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp <img class="exc" src="arrow.png"> </button></a>
+                <a href="https://forms.gle/N46pRsAMvMZQJzvWA"> <button type="button" class="btn btn-info human">Enter your email address...&nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp </button></a>
             </p>
             <!-- <p>
                 <iframe src="https://docs.google.com/forms/d/e/1FAIpQLScPVnLIb2RkBq4lSSLGaIOVT8RZM8aaAMbGqmjDzmJ58W9bRg/viewform?embedded=true" width="640" height="455" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
@@ -30,3 +30,4 @@
         </div>
     </body>
 </html>
+<!-- <img class="exc" src="arrow.png"> -->
